--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="text-box">
         <h1>Dublin City University</h1>
-        <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS,<br> JAVASCRIPT and you are good to go</p>
+        <p><h4>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS,<br> JAVASCRIPT and you are good to go</h4></p>
         <a href="" class="hero-btn">Visit Us To Know More</a>
     </div>    
     </section>
@@ -144,7 +144,7 @@
                </div>
            </div> 
            <div class="testimonials-col">
-               <img src="images/user2.jpg">
+               <img src="images/certificate.jpg">
                <div>
                <p>Lorem ipsum dolor sit amet, consecutor adipscing elit.
                Pellentesque aliquet turpis nulla, eleifend faucibus est sollicitudin ut. Maecenas ut venenatis ex,
